# KTEResourcePacker

./: .kdev_include_paths  CMakeLists.txt  KTEResourcePacker.kdev4  README.md  main.cpp
.kdev4/: KTEResourcePacker.kdev4
Resources/Textures/: Action_Man_Shaded_86
include/: AudioLoader.h  FileLoader.h  FontLoader.h  IResource.h  ResourcePacker.h  TextureLoader.h
src/: .kdev_include_paths  AudioLoader.cpp  CMakeLists.txt  FontLoader.cpp  TextureLoader.cpp
